# dense

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  clippy.toml  deny.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: begin-release.yml  ci.yml  cut-release.yml  release.yml  tag-release.yml
assets/opencode/: condense-thought-sig.js
install/: install.ps1  install.sh
scripts/: release.sh
src/: api.rs  cli.rs  config.rs  doctor.rs  env_file.rs  error.rs  harness.rs  hosts.rs  main.rs  migrate.rs  persist.rs  profile.rs  selfupdate.rs  setup.rs  tool.rs  ui.rs
src/api/: auth.rs  dialect.rs  profile.rs  session.rs
src/harness/: claude.rs  codex.rs  opencode.rs
tests/: cli.rs
