[package]
name = "dense"
version = "0.3.3"
edition = "2024"
rust-version = "1.85"
description = "Durable condense CLI — login once, run Claude Code (and later Codex) through the condense proxy."
license = "MIT"
repository = "https://github.com/condense-chat/dense"
readme = "README.md"

[[bin]]
name = "dense"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt", "macros", "time", "process", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
color-eyre = "0.6"
directories = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
semver = "1"
sha2 = "0.10"
hex = "0.4"
webbrowser = "1"
backon = "1"
cliclack = "0.5"
gethostname = "1"
owo-colors = { version = "4", features = ["supports-colors"] }
self-replace = "1"
which = "8"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unwrap_in_result = "deny"
# Modules use self-named files (foo.rs + foo/), never mod.rs.
mod_module_files = "deny"
# Consistent in-file item ordering.
arbitrary_source_item_ordering = "deny"

[profile.release]
strip = true
lto = true
codegen-units = 1
# size over speed — this binary execs a child and polls HTTP; opt-level
# benchmarking showed no perceptible difference, panics are lint-banned.
opt-level = "s"
panic = "abort"
